[package]
name = "uftwo"
description = "A library for working with the UF2 file format."
version = "0.1.1"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/umi-eng/uftwo"

exclude = ["example.uf2"]

[dependencies]
bitflags = "2.5"
defmt = { version = "0.3", optional = true }
num = { version = "0.4.1", default-features = false }
zerocopy = { version = "0.7", features = ["derive"] }

[features]
defmt-03 = ["dep:defmt"]
