[package]
name = "uftwo"
description = "A library for working with the UF2 file format."
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/umi-eng/uftwo"

exclude = ["example.uf2"]

[[bin]]
name = "uftwo"
required-features = ["cli"]

[dependencies]
bitflags = "2.5"
defmt = { version = "1.0", optional = true }
zerocopy = { version = "0.8", features = ["derive"] }

# CLI only
clap = { version = "4.5.4", optional = true, features = ["derive"] }
clap-num = { version = "1.1.1", optional = true }
num = { version = "0.4.1", default-features = false }
anyhow = { version = "1.0.81", optional = true }

[features]
defmt = ["dep:defmt"]

cli = ["dep:clap", "dep:clap-num", "dep:anyhow"]
